# PRify

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: github.py
backend/app/core/: config.py
backend/app/db/: base.py  database.py  session.py
backend/app/github/: auth.py  client.py  schemas.py  service.py  webhook.py
backend/app/models/: __init__.py  document.py  enums.py  pull_request.py  repository.py  review.py  user.py
backend/app/repositories/: base.py  document.py  pull_request.py  repository.py  review.py  user.py
backend/app/schemas/: document.py  pull_request.py  repository.py  review.py  user.py
backend/app/services/: document.py  pull_request.py  repository.py  review.py  user.py
backend/app/workflows/: graph.py
backend/migrations/: env.py
backend/migrations/versions/: 36503757ec9f_initial_migration.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/dashboard/: page.tsx
frontend/app/repositories/: page.tsx
frontend/app/reviews/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/layout/: Navbar.tsx  Sidebar.tsx
