[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "prify-backend"
version = "0.1.0"
description = "AI-powered multi-agent GitHub Pull Request review system"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "langgraph>=0.1.1",
    "langchain>=0.2.6",
    "langchain-openai>=0.1.9",
    "langchain-qdrant>=0.1.1",
    "qdrant-client>=1.9.1",
    "tree-sitter>=0.21.3",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "black>=24.4.2",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = []

[tool.black]
line-length = 88

[tool.mypy]
strict = true
